# SysOp_2023_DISTAFF

./: .gitignore
PiotrKadziela-cw01/: CMakeLists.txt
PiotrKadziela-cw01/TOSEND/cw1/zad1-3/test/: 1.in
PiotrKadziela-cw01/test/results/: results_shared_-Os.txt  results_static_-O0.txt  results_static_-Os.txt
PiotrKadziela-cw02/zad1/: main.cpp  makefile
PiotrKadziela-cw02/zad1/test/: TESTFILE.OUT
PiotrKadziela-cw02/zad2/: main.cpp  makefile
PiotrKadziela-cw02/zad2/test/: TESTFILE.OUT
PiotrKadziela-cw02/zad4/: CMakeLists.txt  main.cpp
PiotrKadziela-cw02/zad4/test/: TESTFILE1
cw01/: fileData.cpp  fileData.h  makefile  report.txt
cw01/test/: expectedTest.in
cw01/test/results/: results_shared_-O0.txt  results_shared_-O2.txt  results_static_-O2.txt
cw02/zad1/: main.cpp
cw02/zad2/test/: TESTFILE.IN
cw02/zad3/: main.cpp
cw02/zad4/test/TESTDIR1/: TESTFILE1  TESTFILE2
cw03/zad1/: main.cpp  makefile
cw03/zad2/: CMakeLists.txt  main.cpp  makefile
cw03/zad3/: main.cpp  makefile
cw04/zad1/: CMakeLists.txt  main.cpp  makefile
cw04/zad3_catcher/: main.cpp  makefile
cw04/zad3_sender/: main.cpp
cw05/zad1/: CMakeLists.txt  main.cpp  makefile
cw05/zad2/: CMakeLists.txt  main.cpp
cw05/zad3/: main.cpp  makefile
cw06/: client.h  common.h  cw06-new.args.json  cw06-new.sln  cw06-new.vcxproj  main.cpp  server.h
cw06/zad1/: client.h  makefile  server.h
cw07/zad1/: CMakeLists.txt  common.h  main.cpp  pool.h
cw07/zad2/: CMakeLists.txt  main.cpp  makefile  pool.h  queue.h
cw08/zad1_2/: CMakeLists.txt  Makefile  grid.c  grid.h  life.cpp  threaded_update.cpp  threaded_update.h
cw09/zad1/: CMakeLists.txt  common.hpp  elves.hpp  main.cpp  makefile  reindeers.hpp
